# agri

new hack 2/: TODO.md
new hack 2/AgriLink/: buyer.html  farmer.html  index.html  login.html  marketplace-complete.html  marketplace-standalone.html  marketplace.html
new hack 2/AgriLink/css/: styles.css
new hack 2/AgriLink/js/: app.js  auth.js  cart.js  orders.js  products.js  seedData.js
project/: TODO.md
project/backend/: Cargo.toml
project/backend/migrations/: 20250101_000001_create_users.up.sql  20250101_000002_create_products.up.sql
project/backend/src/: auth.rs  main.rs  marketplace.rs  models.rs  routes.rs
project/frontend/: index.html  package.json  vite.config.js
project/frontend/src/: App.css  App.jsx  index.css
project/frontend/src/components/: AddProductForm.jsx  ProductList.jsx
project/frontend/src/context/: AuthContext.jsx
project/frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
