[package]
name = "agrilink-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"

[features]
default = []
